[package]
name = "onesignal-rest"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OneSignal Rest API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/onesignal-rs"
homepage = "https://github.com/bk-rs/onesignal-rs"
documentation = "https://docs.rs/onesignal-rest"
keywords = []
categories = []
readme = "README.md"

[dependencies]
