[package]
name = "onesignal-rest"
version = "0.1.1"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "OneSignal Rest API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/onesignal-rs"
homepage = "https://github.com/bk-rs/onesignal-rs"
documentation = "https://docs.rs/onesignal-rest"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2" }

serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
url = { version = "2.2", default-features = false, features = ["serde"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde-enum-str = { version = "0.2", default-features = false }
